# openbb-french-territorial-intelligence

./: .gitignore  README.md  pyproject.toml
french_territorial_intelligence/: agent.py  crossref.py  main.py
french_territorial_intelligence/sources/: base.py  dvf.py  entreprises.py  geo.py  registry.py
tests/: conftest.py  test_agent.py  test_crossref.py  test_dvf.py  test_entreprises.py  test_geo.py  test_registry.py
