[project]
name = "french-territorial-intelligence"
version = "0.1.0"
description = "OpenBB agent for French territorial intelligence — cross-references open data APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hamide", email = "hamide@tawiza.fr" }]
keywords = ["openbb", "territorial-intelligence", "osint", "france", "open-data"]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/tawiza/openbb-french-territorial-intelligence"
Documentation = "https://tawiza.fr"
Repository = "https://github.com/tawiza/openbb-french-territorial-intelligence"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
